# ipe

./: .editorconfig  .gitignore  CHANGELOG.md  CI_ISSUES.md  Cargo.toml  END_TO_END_EXAMPLE.md  FILES.md  MISSION.md  MVP_PLAN.md  Makefile  PERFTEST_QUICKSTART.md  QUICKSTART.md  README.md  REQUIREMENTS.md  RFC.md  ROADMAP.md  STRUCTURE.txt  SUMMARY.md  TDD_PROGRESS.md  WARNINGS_FIXLIST.md  clippy.toml  codecov.yml  deny.toml  justfile  lsan-suppressions.txt  rustfmt.toml
.agent/: core-prompt.md
.cargo/: config.toml
.claude/commands/: tdd-simple.md  tdd.md  test.md
.github/agents/: README.md  fix-bug.md  implement-feature.md  optimize-performance.md  tdd-workflow.md
.github/scripts/: README.md  check-cargo-audit.sh  check-cargo-geiger.sh  check-coverage.sh  check-leak-sanitizer.sh  check-minimal-versions.sh  check-sanitizer.sh  check-supply-chain.sh
.github/workflows/: bench.yml  ci.yml  coverage.yml  security.yml
crates/ipe-control/: Cargo.toml
crates/ipe-control/src/: lib.rs
crates/ipe-core/: Cargo.toml  PERFTEST.md  README_PERFTEST.md
crates/ipe-core/benches/: approval_benchmarks.rs  evaluation.rs  relationship_benchmarks.rs
crates/ipe-core/src/: approval.rs  ast.rs  bytecode.rs  compiler.rs  engine.rs  index.rs  interpreter.rs  jit.rs  lib.rs  rar.rs  relationship.rs  store.rs  testing.rs  tiering.rs
crates/ipe-core/src/ast/: mod.rs  nodes.rs  types.rs  visitor.rs
crates/ipe-core/src/parser/: lexer.rs  mod.rs  parse.rs  token.rs
crates/ipe-core/tests/: perftest_predicate_execution.rs
crates/ipe-core/tests/integration/: approval_tests.rs  e2e_tests.rs  mod.rs  rar_tests.rs  relationship_tests.rs  scope_ttl_tests.rs  security_tests.rs
crates/ipe-ffi/: Cargo.toml
crates/ipe-ffi/src/: lib.rs
crates/ipe-parser/: Cargo.toml  README.md
crates/ipe-parser/src/: lib.rs
crates/ipe-wasm/: Cargo.toml
crates/ipe-wasm/src/: lib.rs
crates/ipe-web/: Cargo.toml
crates/ipe-web/src/: lib.rs
docs/: .dockerignore  ARCHITECTURE.md  AST.md  BYTECODE.md  DOCKER.md  Dockerfile  INDEX.md  README.md  TESTING_SUMMARY.md  TEST_RESULTS.md  benchmark-history.json  benchmark-latest.json  benchmarks.html  docker-compose.yml  index.html  mission-doc-prompt.md  nginx.conf  package-lock.json  package.json  performance.html  perftest-results.json  playwright.config.js  relationship-implementation-summary.md  rocksdb-integration-implementation-summary.md  scope-ttl-implementation-summary.md  test-coverage-analysis.md  test-pages.js
docs/archive/: IMPLEMENTATION_SUMMARY.md  REFACTORING_ANALYSIS.md  REFACTORING_SUMMARY.md
docs/playwright-report/: index.html
docs/rfcs/: 0001-rocksdb-integration-testing.md  0002-scope-and-ttl-model.md
docs/test-results/: cluster-service-issue-summary.md
docs/tests/: admin-console-clusters.spec.js  admin-console-debug.spec.js  admin-console.spec.js  pages.spec.js  performance-validation.spec.js
examples/: jit_demo.rs  load_test.rs  stress_test.rs
rfcs/: 001-predicate-service-architecture.md  001-sidecar-service-architecture.md  002-sse-json-protocol.md  003-policy-tree-storage.md  004-control-plane.md  004-low-overhead-execution-tracing.md  005-data-plane.md  INDEX.md  PRIVILEGE-BOUNDARIES.md
testing/: README.md
testing/policies/_features/registry/: enable_stats_collection.ipe  require_heartbeat.ipe
testing/policies/_features/sync/: allow_partial_sync.ipe  require_validation.ipe
testing/policies/prod/api/: rate_limit.ipe
testing/policies/prod/deployment/: approval.ipe  validation.ipe
testing/policies/staging/deployment/: approval.ipe
