[workspace]
members = [
    "crates/ipe-core",
    "crates/ipe-parser",
    "crates/ipe-control",
    "crates/ipe-wasm",
    "crates/ipe-ffi",
    "crates/ipe-web",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["IPE Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourorg/ipe"

[workspace.dependencies]
# Core
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
# Fix minimal versions - tonic requires async-stream 0.3.5+
async-stream = "0.3.5"

# Parser
nom = "7.1"
# Fix minimal versions - logos 0.13 has compatibility issues, use 0.14+
logos = "0.14"

# Performance
bumpalo = { version = "3.14", features = ["collections"] }
arc-swap = "1.6"
parking_lot = "0.12"
dashmap = "5.5"
lru = "0.12"
crossbeam-channel = "0.5"

# JIT Compilation
cranelift = "0.102"
cranelift-jit = "0.102"
cranelift-module = "0.102"
cranelift-native = "0.102"
cranelift-codegen = "0.102"
target-lexicon = "0.12"
region = "3.0"  # Memory protection for JIT pages

# gRPC
# Fix minimal versions - tonic 0.10 has issues, use 0.11+
tonic = { version = "0.11", features = ["transport"] }
prost = "0.12"
tonic-build = "0.11"

# WASM
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
web-sys = "0.3"

# Web
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = "1.0"

# Storage
memmap2 = "0.9"
bincode = "1.3"

# Metrics
prometheus = "0.13"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# FFI
libc = "0.2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"
