[package]
name = "ipe-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
bumpalo = { workspace = true }
arc-swap = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
lru = { workspace = true }
memmap2 = { workspace = true }
bincode = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
crossbeam-channel = { workspace = true }
# Fix minimal versions check - ahash <0.8.8 has a bug with stdsimd feature
ahash = ">=0.8.8"

# Approval storage (optional feature)
rocksdb = { workspace = true, optional = true }
tempfile = { version = "3.8", optional = true }

# JIT compilation (optional feature)
cranelift = { workspace = true, optional = true }
cranelift-jit = { workspace = true, optional = true }
cranelift-module = { workspace = true, optional = true }
cranelift-native = { workspace = true, optional = true }
cranelift-codegen = { workspace = true, optional = true }
target-lexicon = { workspace = true, optional = true }
region = { workspace = true, optional = true }

[features]
default = []
testing = []
approvals = ["rocksdb", "tempfile"]
jit = [
    "cranelift",
    "cranelift-jit",
    "cranelift-module",
    "cranelift-native",
    "cranelift-codegen",
    "target-lexicon",
    "region"
]

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"

[[bench]]
name = "evaluation"
harness = false

[[bench]]
name = "approval_benchmarks"
harness = false
required-features = ["approvals"]

[[bench]]
name = "relationship_benchmarks"
harness = false
required-features = ["approvals"]

[[test]]
name = "integration"
path = "tests/integration/mod.rs"
required-features = ["approvals"]
